[package]
name = "holons_test"
version = "0.1.0"
edition = "2021"
publish = false

# (You can omit [lib] entirely unless you need a custom crate-type or name)

[dependencies]
# Workspace shared_crates (prefer workspace deps over path for consistency)

# General deps
async-trait = "0.1.51"
#base64ct = "=1.7.3"
derive-new = "0.7"
pretty_assertions = "1.4.0"
serde = { version = "1", features = ["derive"] }
#serde_json = "1.0.109"
tracing = "0.1"
sha2 = "0.10.8"
uuid = { version = "1", features = ["serde"] }

[dependencies.holons_prelude]
path = "../../shared_crates/holons_prelude"

#[dependencies.holons_guest_integrity]
#path = "../../shared_crates/holons_guest_integrity"
#
[dependencies.holon_dance_builders]
path = "../../shared_crates/holon_dance_builders"

[dependencies.holons_core]
path = "../../shared_crates/holons_core"

[dependencies.holons_client]
path = "../../host/crates/holons_client"

[dependencies.holons_loader_client]
path = "../../host/crates/holons_loader_client"

[dependencies.holons_trust_channel]
path = "../../shared_crates/holons_trust_channel"

[dependencies.type_names]
path = "../../shared_crates/type_system/type_names"

[dependencies.core_types]
path = "../../shared_crates/type_system/core_types"

[dependencies.integrity_core_types]
path = "../../shared_crates/type_system/integrity_core_types"

[dependencies.base_types]
path = "../../shared_crates/type_system/base_types"

[dev-dependencies.holons_trust_channel]
path = "../../shared_crates/holons_trust_channel"

[dev-dependencies]
rstest = "0.26.1"
pretty_assertions = "1.4"
#futures = { version = "0.3.1", default-features = false }
tokio = { version = "1", features = ["full"] }
async-std = "1"
tracing-subscriber = "0.3"

# Holochain sweettest stack (pin as you already do)
holochain = { version = "0.5", default-features = false, features = [
    "sweettest",
    "wasmer_sys",
    "datachannel-vendored"
] }