[package]
name = "map_schema_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5.16", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "map_schema_tool"
path = "src/lib.rs"

[[bin]]
name = "map-schema"
path = "src/main.rs"

[workspace]
