[package]
name = "wasm-build"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
# Zomes
holons = { path = "../../zomes/coordinator/holons" }
holons_integrity = { path = "../../zomes/integrity/holons_integrity" }

# Shared Types and Validation
shared_validation = { path = "../../crates/shared_validation" }
base_types = { path = "../../crates/type_system/base_types" }
core_types = { path = "../../crates/type_system/core_types" }
integrity_core_types = { path = "../../crates/type_system/integrity_core_types" }
type_names = { path = "../../crates/type_system/type_names" }

# Shared Core & Guest Libraries
holons_core = { path = "../../crates/holons_core" }
holon_dance_builders = { path = "../../crates/holon_dance_builders" }
holons_guest = { path = "../../crates/holons_guest" }
holons_guest_integrity = { path = "../../crates/holons_guest_integrity" }
holons_prelude = { path = "../../crates/holons_prelude" }
holons_trust_channel = { path = "../../crates/holons_trust_channel" }


[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
