[package]
name = "wasm-build"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# NOTE:
# This Cargo.toml does not use most dependencies directly.
# They are required because this crate defines the WASM build boundary.
# All crates referenced here must be included so Cargo can resolve
# dependency graphs for holons_guest, holons_integrity, and holons.

[package.metadata.rust-analyzer]
# Allow unused deps inside orchestrator crates
# (this suppresses the IDE warnings)
unused_crate_dependencies = false

[dependencies]
# Zomes
holons = { path = "../../zomes/coordinator/holons" }
holons_integrity = { path = "../../zomes/integrity/holons_integrity" }

# Shared Types and Validation
shared_validation = { path = "../../crates/shared_validation" }
base_types = { path = "../../crates/type_system/base_types" }
core_types = { path = "../../crates/type_system/core_types" }
integrity_core_types = { path = "../../crates/type_system/integrity_core_types" }
type_names = { path = "../../crates/type_system/type_names" }

# Shared Core & Guest Libraries
holons_core = { path = "../../crates/holons_core" }
holon_dance_builders = { path = "../../crates/holon_dance_builders" }
holons_guest = { path = "../../crates/holons_guest" }
holons_guest_integrity = { path = "../../crates/holons_guest_integrity" }
holons_prelude = { path = "../../crates/holons_prelude" }
holons_loader = { path = "../../crates/holons_loader" }


[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
