[package]
name = "dances"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "dances"

[dependencies]
hdk = { workspace = true }
hdi = { workspace = true }
holochain_integrity_types = { workspace = true }
thiserror = { workspace = true, features = [] }
#holochain = "0.1.7"

#holons_integrity = { workspace = true }
serde = { workspace = true }
derive-new = { workspace = true }

shared_types_holon = { workspace = true }
holons = {workspace = true}
descriptors = {workspace = true}
core_schema = {workspace = true}

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]

holochain = { version = "0.3", default-features = false, features = ["test_utils",] }
tokio = { version = "1.35.1", features = ["full"] }
futures = { version = "0.3.1", default-features = false }
rstest = "0.21"
async-std = "1.1.12"

pretty_assertions = "1.4.0"

#[dev-dependencies]
