[package]
name = "descriptors"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "descriptors"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
# General Dependencies
serde = { workspace = true }
derive-new = { workspace = true }
thiserror = { workspace = true }

# Holochain Dependencies
hdk = { workspace = true }
hdi = { workspace = true}
holochain_integrity_types = { workspace = true }

# MAP Dependencies

holons_integrity = { workspace = true }
holons = {workspace = true}
shared_types_holon = {workspace = true}

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]

holochain = {version = "0.1.7", default-features = false, features = ["test_utils"] }
tokio = { version = "1.3", features = ["full"] }
futures = { version = "0.3.1", default-features = false }
rstest = "0.18.1"
async-std = "1.1.12"

#[dev-dependencies]

